--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>titulos</title>
+    <title>TITULAO</title>
+    <link rel="stylesheet" href="../dist/styles/main.css">
+    
 </head>
 <body>
-    <div class="container">
-        
-    </div>
+
 </body>
 </html>
